--- a/RR_LibrarymanagementSystem/RR_LibrarymanagementSystem.csproj
+++ b/RR_LibrarymanagementSystem/RR_LibrarymanagementSystem.csproj
@@ -19,9 +19,11 @@
   <ItemGroup>
     <None Remove="Views\User\" />
     <None Remove="Views\Shared\Adminlayout\" />
+    <None Remove="Views\Shared\ClientLayout\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Views\User\" />
     <Folder Include="Views\Shared\Adminlayout\" />
+    <Folder Include="Views\Shared\ClientLayout\" />
   </ItemGroup>
 </Project>
