--- a/RR_LibrarymanagementSystem/RR_LibrarymanagementSystem.csproj
+++ b/RR_LibrarymanagementSystem/RR_LibrarymanagementSystem.csproj
@@ -13,15 +13,18 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="6.0.0" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.16" />
   </ItemGroup>
   <ItemGroup>
     <None Remove="Views\User\" />
     <None Remove="Views\Shared\Adminlayout\" />
     <None Remove="Views\Shared\ClientLayout\" />
+    <None Remove="Views\Admin\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Views\User\" />
     <Folder Include="Views\Shared\Adminlayout\" />
     <Folder Include="Views\Shared\ClientLayout\" />
+    <Folder Include="Views\Admin\" />
   </ItemGroup>
 </Project>
